<resources>
    <string name="app_name">Device Connect Manager</string>
    <string name="description"></string>
    <string name="activity_launch_button_launch">Launch</string>
    <string name="activity_launch_button_stop">Stop</string>
    <string name="activity_launch_button_cancel">Cancel</string>
    <string name="activity_launch_button_settings">Settings</string>
    <string name="activity_launch_message_launch">Please click the below button\nto launch Device Connect Manager.</string>
    <string name="activity_launch_message_stop">Please click the below button\nto stop Device Connect Manager.</string>
    <string name="activity_settings_server_on_off">Device Connect Manager</string>
    <string name="activity_settings_observer">Monitoring Port</string>
    <string name="activity_settings_observer_summary">Notify the possibility that Manager will be spoofed if the port is used by other application.</string>
    <string name="activity_settings_allow_external_ip">Allow External IP</string>
    <string name="activity_settings_require_origin">Require Origin</string>
    <string name="activity_settings_require_origin_summary">Require applications to set Origin header to their requests.</string>
    <string name="activity_settings_server_keyword">Keyword</string>
    <string name="activity_settings_server_settings">Settings</string>
    <string name="activity_settings_dconnect_enabled">On</string>
    <string name="activity_settings_dconnect_disabled">Off</string>
    <string name="activity_settings_default_keyword"></string>
    <string name="activity_settings_keyword">Keyword</string>
    <string name="activity_settings_ssl">SSL</string>
    <string name="activity_settings_host">Host</string>
    <string name="activity_settings_port">Port</string>
    <string name="activity_settings_document_root">Document Root Path</string>
    <string name="activity_settings_default_host">localhost</string>
    <string name="activity_settings_default_port">4035</string>
    <string name="activity_settings_local_oauth">Local OAuth</string>
    <string name="activity_settings_local_oauth_summary">Authorize applications by user.</string>
    <string name="activity_settings_dconn_enabled">Enabled</string>
    <string name="activity_settings_dconn_disabled">Disabled</string>
    <string name="activity_settings_list_access_token_list">List of access token</string>
    <string name="activity_settings_terms_of_service">Terms of Service</string>
    <string name="activity_settings_privacy_policy">Privacy Policy</string>
    <string name="activity_settings_open_source_licenses">Open Source Licenses</string>
    <string name="activity_settings_open_source_licenses_summary">Legal information about licenses</string>
    <string name="activity_settings_app_infomation_summary">Version %1$s</string>
    <string name="activity_settings_about">About</string>
    <string name="activity_settings_general">General</string>
    <string name="activity_settings_not_logged_in">Not logged in yet</string>
    <string name="activity_settings_security">Security</string>
    <string name="activity_settings_whitelist">Whitelist</string>
    <string name="activity_settings_whitelist_enable">Enable origin blocking</string>
    <string name="activity_settings_whitelist_enable_summary">Block requests of applications that the origin is not included in whitelist.</string>
    <string name="activity_settings_manage_whitelist">Manage whitelist</string>
    <string name="activity_settings_device_plugin">Device Plug-in</string>
    <string name="activity_settings_list_device_plugin">List of device plug-in</string>
    <string name="activity_settings_restart_device_plugin">Restart all the devices plug-ins</string>
    <string name="activity_settings_restart_device_plugin_title">Starting Device Plug-in</string>
    <string name="activity_settings_restart_device_plugin_message">Processing</string>
    <string name="activity_settings_warning_require_origin_disabled">The below other settings will be turned OFF because these settings reffer origins of apps.\n\n%1\nIs it OK？</string>
    <string name="activity_settings_warning_require_origin_enabled">The below other settings will be turned ON because this setting reffers origins of apps.\n\n%1\nIs it OK？</string>
    <string name="activity_settings_warning">Warning</string>
    <string name="activity_settings_yes">Yes</string>
    <string name="activity_settings_no">No</string>
    <string name="activity_settings_close">Close</string>
    <string name="activity_settings_web_server_settings">Setting of Web Server</string>
    <string name="activity_settings_web_server">Web Server</string>
    <string name="activity_settings_web_server_default_host">localhost</string>
    <string name="activity_settings_web_server_default_port">8080</string>
    <string name="activity_settings_web_server_document_root">Document Root Path</string>
    <string name="key_settings_about_appinfo">settings_about_appinfo</string>
    <string name="key_settings_dconn_server_on_off">settings_dconn_server_on_off</string>
    <string name="key_settings_dconn_observer_on_off">settings_dconn_observer_on_off</string>
    <string name="key_settings_dconn_keyword">settings_dconn_server_keyword</string>
    <string name="key_settings_dconn_allow_external_ip">settings_dconn_allow_external_ip</string>
    <string name="key_settings_dconn_require_origin">settings_dconn_require_origin</string>
    <string name="key_settings_dconn_ssl">settings_dconn_ssl</string>
    <string name="key_settings_dconn_host">settings_dconn_host</string>
    <string name="key_settings_dconn_port">settings_dconn_port</string>
    <string name="key_settings_dconn_local_oauth">settings_dconn_local_oauth</string>
    <string name="key_settings_list_access_token">settings_list_access_token</string>
    <string name="key_settings_dconn_observation_interval">key_settings_dconn_observation_interval</string>
    <string name="key_settings_open_source_licenses">settings_open_source_licenses</string>
    <string name="key_settings_about_privacypolicy">settings_about_privacypolicy</string>
    <string name="key_settings_about_tos">settings_about_tos</string>
    <string name="key_settings_dconn_whitelist">settings_whitelist</string>
    <string name="key_settings_dconn_whitelist_origin_blocking">settings_whitelist_origin_blocking</string>
    <string name="key_settings_list_device_plugin">settings_list_device_plugin</string>
    <string name="key_settings_restart_device_plugin">settings_device_plugin</string>
    <string name="key_settings_web_server_on_off">key_settings_web_server_on_off</string>
    <string name="key_settings_web_server_host">key_settings_web_server_host</string>
    <string name="key_settings_web_server_port">key_settings_web_server_port</string>
    <string name="key_settings_web_server_document_root_path">key_settings_web_server_document_root_path</string>
    <string name="activity_whitelist_title">Whitelist of Origin</string>
    <string name="no_origin">No allowed origin by user.</string>
    <string name="dialog_delete_origin_message">Are you sure you want to remove this origin from whitelist?</string>
    <string name="dialog_delete_origin_positive">Remove</string>
    <string name="dialog_delete_origin_negative">Cancel</string>
    <string name="menu_add_origin">Add</string>
    <string name="dialog_add_origin_title">Add an origin to be allowed</string>
    <string name="dialog_add_origin_positive">Add</string>
    <string name="dialog_add_origin_negative">Cancel</string>
    <string name="dialog_update_origin_title">Update this origin</string>
    <string name="dialog_update_origin_positive">Update</string>
    <string name="dialog_update_origin_negative">Cancel</string>
    <string name="dialog_origin_manual_entry_item_title">Title</string>
    <string name="dialog_origin_manual_entry_item_origin">Origin</string>
    <string name="dialog_origin_manual_entry_message">Please enter an origin at least.</string>
    <string-array name="whitelist_menu_origin_pre_marshmallow">
        <item>from the bookmark of Chrome</item>
        <item>from the installed app.</item>
        <item>from manual entry</item>
    </string-array>
    <string-array name="whitelist_menu_origin_post_marshmallow">
        <item>from the installed app.</item>
        <item>from manual entry</item>
    </string-array>
    <string name="activity_devicepluginlist_title">List of device plug-in</string>
    <string name="activity_devicepluginlist_version">version: </string>
    <string name="activity_deviceplugin_info_title">device plug-in info</string>
    <string name="activity_deviceplugin_info_version">version: </string>
    <string name="activity_deviceplugin_info_restart">Restart</string>
    <string name="activity_deviceplugin_info_uninstall">Delete</string>
    <string name="activity_deviceplugin_info_settings">Settings</string>
    <string name="activity_deviceplugin_info_open_settings">Open settings</string>
    <string name="activity_deviceplugin_info_profile">Profile</string>
    <string name="activity_keyword">Keyword</string>
    <string name="activity_keyword_ok">OK</string>
    <string name="activity_warning">Warning</string>
    <string name="activity_warning_mess">Manager could not started because other application is using the port.</string>
    <string name="activity_warning_ok">OK</string>
    <string name="activity_warning_disable">Do not display from the next time</string>
    <string name="service_observation_warning">Warning</string>
    <string name="service_observation_msg_no_permission">Port observation was interrupted due to lack of file read permission.</string>
    <string name="contents"></string>
    <string name="action_settings">Settings</string>
    <string name="action_menu">Menu</string>
    <string name="action_search">Network Service Discovery</string>
    <string name="action_access_token">Request AccessToken</string>
    <string name="action_input_session_key">Input SessionKey</string>
    <string name="discovery">servicediscovery</string>
    <string name="http_method">HTTP Method:</string>
    <string name="profile">Profile:</string>
    <string name="interfaces">Interfaces:</string>
    <string name="attribute">Attribute:</string>
    <string name="serviceid">Service ID:</string>
    <string name="send_request">Send</string>
    <string name="select_or_url">Parameter or URL</string>
    <string name="url_hint1">param1=xxx&amp;param2=yyy</string>
    <string name="url_hint2">/profile/interfaces/attribute?param1=xxx</string>
    <string name="content_description"></string>
    <string name="websocket_open">WebSocket Open</string>
    <string name="websocket_close">WebSocket Close</string>
    <string name="chrome_bookmark_provider_url">content://com.android.chrome.browser/bookmarks</string>
    <string name="authorization_profile">/authorization</string>
    <string-array name="authorization_interface_list">
        <item></item>
    </string-array>
    <string-array name="authorization_attrib_list">
        <item></item>
        <item>create_client</item>
        <item>request_accesstoken</item>
    </string-array>
    <string name="servicediscovery_profile">servicediscovery</string>
    <string-array name="servicediscovery_interface_list">
        <item></item>
    </string-array>
    <string-array name="servicediscovery_attrib_list">
        <item></item>
        <item>onservicechange</item>
    </string-array>
    <string name="serviceinformation_profile">serviceinformation</string>
    <string-array name="serviceinformation_interface_list">
        <item></item>
    </string-array>
    <string-array name="serviceinformation_attrib_list">
        <item></item>
    </string-array>
    <string name="system_profile">system</string>
    <string-array name="system_interface_list">
        <item></item>
    </string-array>
</resources>