<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:scaleType="fitXY"
        android:src="@drawable/icon"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/description"
        />

    <TextView
        android:id="@+id/text_manager_launcher_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_launch_message_launch"
        android:textSize="16sp"
        android:textColor="#00a0e9"
        android:gravity="center_horizontal"
        android:layout_marginBottom="34dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_manager_launcher_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/activity_launch_button_cancel"
            android:textSize="20sp"
            android:textColor="#00a0e9"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/button_blue_border" />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button_manager_launcher_launch_or_stop"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/activity_launch_button_launch"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:background="@drawable/button_blue" />
    </LinearLayout>
</LinearLayout>
