<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/plugin_icon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/plugin_package_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="4"
                    android:scrollHorizontally="true"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/plugin_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="4"
                    android:scrollHorizontally="true"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="#000000"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/plugin_restart_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_deviceplugin_info_restart" />

            <Button
                android:id="@+id/plugin_delete_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_deviceplugin_info_uninstall"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColor="#323232"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/activity_deviceplugin_info_settings"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="#BBBBBB">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF">
            </View>
            <Button
                android:id="@+id/plugin_settings_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/activity_deviceplugin_info_open_settings" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColor="#323232"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/activity_deviceplugin_info_profile"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="#BBBBBB">
        </View>

        <LinearLayout
            android:id="@+id/plugin_support_profiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">
        </LinearLayout>
    </LinearLayout>
</ScrollView>
